@@ -6,3 +6,6 @@ the controls are just like classical snake games except for one addition control
 press 'r' to start a new life and update your high score
 
 also, thank you Liquid for the idea of high score
+
+
+to run the jar file you need some dependencies but the command line argument would look something like ```java --module-path "C:\User\username\path...\JavaFX\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml -jar snake.jar```
